[tool.poetry]
name = "smartgrids2"
version = "0.1.0"
description = ""
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "^1.0.0"
pandas = "^1.3.3"
pymongo = {extras = ["srv"], version = "^3.12.0"}
numpy = "^1.21.2"
matplotlib = "^3.4.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
